fix: agregar overflow x en sidebar

--- a/frontend/src/styles/sidebar-template.css
+++ b/frontend/src/styles/sidebar-template.css
@@ -101,6 +101,7 @@
   flex-grow: 1;
   padding: 10px 0;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .sidebar .sidebar-footer {
